--- a/assets/css/sass/elements/_mainHeader.scss
+++ b/assets/css/sass/elements/_mainHeader.scss
@@ -4,12 +4,10 @@
 
 @mixin mainHeader {
 	#main-header {
-	  position: fixed;
-	  top: 0;
-	  left: 0;
-	  right: 0;
-	  z-index: 2000;
-	  @include transition(all .5s);
+		position: fixed;
+		top: 0; left: 0; right: 0;
+		z-index: 2000;
+		@include transition(all .5s);
 	}
 
 	@include logo;
