Adjust footer small widths.

--- a/assets/css/sass/colors/_colors-css.scss
+++ b/assets/css/sass/colors/_colors-css.scss
@@ -1,5 +1,5 @@
-@import "_colors-constants";
-@import "_colors-defaultSettings";
+@import "colors-constants";
+@import "colors-defaultSettings";
 
 
 body {
