--- a/assets/css/sass/elements/_footer.scss
+++ b/assets/css/sass/elements/_footer.scss
@@ -1,28 +1,39 @@
 @mixin footer {
-  footer.container {
+  .footer {
     
     height: $footer_h_1;
     @include respond-to(small) { height: $footer_h_2; } 
     @include respond-to(landscape) { height: $footer_h_2; } 
 
-    > div {
-
+    .site-info,
+    .social-links { 
       height: 100%;
 
-      > * { @include vCentered; }
-
+      > * {
+        @include vCentered; 
+      }
+      
       @include respond-to(medium) { 
+        float: none;
         display: block;
         width: 100%;
-        height: 50%;
       }
     }
     
-    .site-info { float: left; }
+    .site-info { 
+      float: left; 
+      @include respond-to(medium) { 
+        height: 40%; 
+      }
+    }
 
     .social-links {
       
       float: right;
+
+      @include respond-to(medium) { 
+        height: 60%; 
+      }
      
       li {
         display: inline-block;
