--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -690,12 +690,16 @@ p {
     float: left; }
     @media screen and (max-width: 650px) {
       .footer .site-info {
-        height: 40%; } }
+        height: 40%; }
+        .footer .site-info p {
+          padding: 0; } }
   .footer .social-links {
     float: right; }
     @media screen and (max-width: 650px) {
       .footer .social-links {
-        height: 60%; } }
+        height: 60%; }
+        .footer .social-links ul {
+          padding-bottom: 6px; } }
     .footer .social-links li {
       display: inline-block;
       padding-left: 6px; }
