--- a/assets/css/sass/elements/_grid.scss
+++ b/assets/css/sass/elements/_grid.scss
@@ -88,7 +88,7 @@
 @mixin grid {
   .grid {
     
-    @include respond-to(medium) { padding: 0 0 11%; }
+    @include respond-to(medium) { padding: 5% 0 11%; }
 
     @include tile;
 
