Rename to sideMenu.

--- a/assets/css/sass/_settings.scss
+++ b/assets/css/sass/_settings.scss
@@ -51,3 +51,8 @@ $break-smallest: 350px;
 $break-small: 480px;
 $break-medium: 650px;
 $break-large: 1350px;
+
+
+// ---------------------------------- SIDE MENU
+
+$useSideMenu: true;
