--- a/assets/css/sass/layout/_layout.scss
+++ b/assets/css/sass/layout/_layout.scss
@@ -93,6 +93,11 @@ p { padding-bottom: .3em; }
 @include mainHeader;
 
 
+// --------------------------------------- SIDE MENU
+
+@if $useSideMenu { @include sideMenu; }
+
+
 // ---------------------------------------- SECTIONS
 #sections {
   &::before {
