--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -11,6 +11,7 @@
 
 @import "elements/headerWrapper";
 @import "elements/mainHeader";
+@import "elements/sideMenu";
 @import "elements/grid";
 @import "elements/footer";
 
@@ -20,6 +21,8 @@
 @import "sections/contact";
 
 @import "layout/layout";
+
+
 
 
 
