fix main.js for sideMenu case.

--- a/assets/css/sass/elements/_sideMenu.scss
+++ b/assets/css/sass/elements/_sideMenu.scss
@@ -86,6 +86,10 @@ $useSideMenu: false !default;
           }
         }
       }
+
+      #sections .section.last {
+        min-height: calc(100vh - #{$footer_h_2});
+      }
     }
   }
 }
