--- a/assets/css/sass/elements/_headerWrapper.scss
+++ b/assets/css/sass/elements/_headerWrapper.scss
@@ -10,12 +10,13 @@
     .about & { width: percentage(530px/$max_layout_width); }
     .contact & { width: 100%; }
 
-    .home &, .work &, .about &, .contact & {
+    .home &, .work & {
       @include respond-to(medium) {
         width: 70%;
         padding: 3% 0;
       }
-
+    }
+    .home &, .work &, .about &, .contact & {
       @include respond-to(small) { width: 80%; }
       @include respond-to(smallest) { width: 100%; }
       @include respond-to(landscape) { padding: 3% 0; }
