--- a/assets/css/sass/elements/_sideMenu.scss
+++ b/assets/css/sass/elements/_sideMenu.scss
@@ -22,9 +22,9 @@ $useSideMenu: false !default;
 
       #logo {
         float: right;
+        width: 95%;
         margin: 0 auto;
         padding: 4% 0;
-        width: 95%;
       }
 
       #header-nav {
@@ -50,39 +50,14 @@ $useSideMenu: false !default;
           
           &:hover { border-left: 6px solid $link_color2; }
 
+          .mobile &.no-touch { 
+            border-left: 6px solid $color1;
+          }
+          
           a {
             margin: 50% 0 0;
             padding: 0;
             line-height: 0;
-          }
-        }
-      }
-
-      @at-root .mobile .state2 #header-nav .no-touch {
-        @media screen and (max-device-height: 600px) and (orientation: landscape) {
-          border-left: 6px solid $color1;
-        }
-      }
-
-      &.expanded {
-        float: none;
-        width: 100%;
-        height: 100vh;
-        margin: 60px auto;
-        @include show;
-
-        li {
-          width: 100%;
-          float: none;
-          margin: 0 0 17%;
-
-          &:first-child {
-            margin-top: 20px;
-          }
-
-          a {
-            padding: 0;
-            margin: 0;
           }
         }
       }
