--- a/assets/css/sass/fonts/_fonts-css.scss
+++ b/assets/css/sass/fonts/_fonts-css.scss
@@ -3,6 +3,13 @@ $font_family_2: 'Dosis', sans-serif !default;
 
 $base_font_size: 16px !default;
 
+$font_weight_light: 100 !default;
+$font_weight_middle: 400 !default;
+$font_weight_bold: 600 !default;
+$font_weight_bolder: 700 !default;
+$font_weight_boldest: 900 !default;
+
+
 body {
   font-family: $font_family_1;
   font-weight: $font_weight_light;
