--- a/assets/css/sass/elements/_mainHeader.sass
+++ b/assets/css/sass/elements/_mainHeader.sass
@@ -10,6 +10,8 @@
     right: 0
     z-index: 2000
     +transition(all .5s)
+    .mobile .state2 &
+      position: static
   +logo
   +headerMenu
   +collapsedMenu
