--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,6 +307,8 @@ p {
     min-height: calc(100vh - 239px); }
     .mobile .state1 #sections .section.last {
       min-height: calc(100vh - 100px); }
+.state1 .footer {
+  height: 100px; }
 @media screen and (max-width: 480px) {
   .state1 #main-header {
     height: 100px; }
@@ -318,7 +320,9 @@ p {
     .state1 #sections .section.last {
       min-height: calc(100vh - 200px); }
       .mobile .state1 #sections .section.last {
-        min-height: calc(100vh - 100px); } }
+        min-height: calc(100vh - 100px); }
+  .state1 .footer {
+    height: 100px; } }
 @media screen and (max-width: 350px) {
   .state1 #main-header {
     height: 85px; }
@@ -330,7 +334,9 @@ p {
     .state1 #sections .section.last {
       min-height: calc(100vh - 185px); }
       .mobile .state1 #sections .section.last {
-        min-height: calc(100vh - 100px); } }
+        min-height: calc(100vh - 100px); }
+  .state1 .footer {
+    height: 100px; } }
 @media screen and (max-height: 650px) and (orientation: landscape) {
   .state1 #main-header {
     height: 60px; }
@@ -340,9 +346,11 @@ p {
     height: 100%;
     min-height: calc(100vh - 60px); }
     .state1 #sections .section.last {
-      min-height: calc(100vh - 140px); }
+      min-height: calc(100vh - 120px); }
       .mobile .state1 #sections .section.last {
-        min-height: calc(100vh - 80px); } }
+        min-height: calc(100vh - 60px); }
+  .state1 .footer {
+    height: 60px; } }
 
 .state2 #main-header {
   height: 111px; }
@@ -355,6 +363,8 @@ p {
     min-height: calc(100vh - 211px); }
     .mobile .state2 #sections .section.last {
       min-height: calc(100vh - 100px); }
+.state2 .footer {
+  height: 100px; }
 @media screen and (max-width: 480px) {
   .state2 #main-header {
     height: 100px; }
@@ -366,7 +376,9 @@ p {
     .state2 #sections .section.last {
       min-height: calc(100vh - 180px); }
       .mobile .state2 #sections .section.last {
-        min-height: calc(100vh - 80px); } }
+        min-height: calc(100vh - 80px); }
+  .state2 .footer {
+    height: 80px; } }
 @media screen and (max-width: 350px) {
   .state2 #main-header {
     height: 85px; }
@@ -378,7 +390,9 @@ p {
     .state2 #sections .section.last {
       min-height: calc(100vh - 165px); }
       .mobile .state2 #sections .section.last {
-        min-height: calc(100vh - 80px); } }
+        min-height: calc(100vh - 80px); }
+  .state2 .footer {
+    height: 80px; } }
 @media screen and (max-height: 650px) and (orientation: landscape) {
   .state2 #main-header {
     height: 60px; }
@@ -388,9 +402,11 @@ p {
     height: 100%;
     min-height: calc(100vh - 60px); }
     .state2 #sections .section.last {
-      min-height: calc(100vh - 140px); }
+      min-height: calc(100vh - 120px); }
       .mobile .state2 #sections .section.last {
-        min-height: calc(100vh - 80px); } }
+        min-height: calc(100vh - 60px); }
+  .state2 .footer {
+    height: 60px; } }
 
 .container {
   max-width: 1200px;
@@ -426,6 +442,7 @@ p {
     position: static; }
 
 #logo {
+  max-width: 149px;
   -webkit-transition: all 0.3s;
   -ms-transition: all 0.3s;
   transition: all 0.3s; }
@@ -700,52 +717,45 @@ p {
       width: 32%;
       margin: auto; } }
 
-.footer {
-  height: 100px; }
-  @media screen and (max-width: 480px) {
-    .footer {
-      height: 80px; } }
-  @media screen and (max-height: 650px) and (orientation: landscape) {
-    .footer {
-      height: 80px; } }
-  .footer .site-info,
-  .footer .social-links {
-    height: 100%; }
-    .footer .site-info > *,
-    .footer .social-links > * {
-      position: relative;
-      top: 50%;
-      -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-      transform: translateY(-50%); }
-    @media screen and (max-width: 650px) {
-      .footer .site-info,
-      .footer .social-links {
-        float: none;
-        display: block;
-        width: 100%; } }
-  .footer .site-info {
-    float: left; }
-    @media screen and (max-width: 650px) {
-      .footer .site-info {
-        height: 40%; }
-        .footer .site-info p {
-          padding: 0; } }
-  .footer .social-links {
-    float: right; }
-    @media screen and (max-width: 650px) {
-      .footer .social-links {
-        height: 60%; }
-        .footer .social-links ul {
-          padding-bottom: 6px; } }
-    .footer .social-links li {
-      display: inline-block;
-      padding-left: 6px; }
-      .footer .social-links li:hover {
-        cursor: pointer; }
-      .footer .social-links li:first-child {
-        padding-left: 0; }
-      .footer .social-links li a {
-        width: 32px;
-        height: 32px; }
+.footer .site-info,
+.footer .social-links {
+  height: 100%; }
+  .footer .site-info > *,
+  .footer .social-links > * {
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%); }
+  @media screen and (max-width: 650px) {
+    .footer .site-info,
+    .footer .social-links {
+      float: none;
+      display: block;
+      width: 100%; } }
+.footer .site-info {
+  float: left; }
+  @media screen and (max-width: 650px) {
+    .footer .site-info {
+      height: 40%; }
+      .footer .site-info p {
+        padding: 0; } }
+.footer .social-links {
+  float: right; }
+  @media screen and (max-width: 650px) {
+    .footer .social-links {
+      height: 60%; }
+      .footer .social-links ul {
+        padding-bottom: 6px; } }
+  .footer .social-links li {
+    display: inline-block;
+    padding-left: 6px; }
+    .footer .social-links li:hover {
+      cursor: pointer; }
+    .footer .social-links li:first-child {
+      padding-left: 0; }
+    .footer .social-links li a {
+      width: 32px;
+      height: 32px; }
 
+/*# sourceMappingURL=style.css.map */
