re-factorize setLayoutHeights.

--- a/assets/css/sass/elements/_mainHeader.sass
+++ b/assets/css/sass/elements/_mainHeader.sass
@@ -10,7 +10,7 @@
     right: 0
     z-index: 2000
     +transition(all .5s)
-    .mobile .state2 &
+    .mobile &
       position: static
   +logo
   +headerMenu
