redo centerContents and fit about grid.

--- a/assets/css/sass/elements/_footer.sass
+++ b/assets/css/sass/elements/_footer.sass
@@ -5,19 +5,19 @@
       height: 100%
       > *
         +vCentered
-      +respond-to(medium)
+      +respond-to(small)
         float: none
         display: block
         width: 100%
     .site-info
       float: left
-      +respond-to(medium)
+      +respond-to(small)
         height: 40%
         p 
           padding: 0
     .social-links
       float: right
-      +respond-to(medium)
+      +respond-to(small)
         height: 60%
         ul
           padding-bottom: 6px
