--- a/assets/css/sass/elements/_grid.sass
+++ b/assets/css/sass/elements/_grid.sass
@@ -76,7 +76,7 @@
       width: 33%
       +respond-to(medium)
         width: 100%
-        margin: 10% auto
+        margin: 0 auto 10% auto
       +respond-to(smallest)
         width: 100%
       +respond-to(landscape)
