--- a/assets/css/sass/layout/_layout.sass
+++ b/assets/css/sass/layout/_layout.sass
@@ -8,12 +8,12 @@
     .section 
       height: 100%
       min-height: calc(100vh - #{$h})
-      .fullscreen
+      &.fullscreen
         max-height: calc(100vh - #{$h})
       &.last 
         $th: $h + $f
         min-height: calc(100vh - #{$th})
-        .fullscreen
+        &.fullscreen
           max-height: calc(100vh - #{$th})
   .footer 
     height: $f
@@ -70,7 +70,7 @@ p
 // -------------------------------- FULLSCREEN CLASS
 .fullscreen
   overflow: hidden
-  
+
 // ------------------------------------- MAIN HEADER
 +mainHeader
 
