--- a/assets/css/sass/fonts/_fonts-css.sass
+++ b/assets/css/sass/fonts/_fonts-css.sass
@@ -15,7 +15,7 @@ body
   font-weight: $font_weight_light
   +respond-to(small)
     font-weight: $font_weight_middle
-  .mobile &
+  .touch-device &
     font-weight: $font_weight_middle
   font-size: $base_font_size
   +respond-to(small)
@@ -64,7 +64,7 @@ a
     font-weight: $font_weight_middle
     +respond-to(medium)  
       font-weight: $font_weight_light 
-      .mobile &
+      .touch-device &
         font-weight: $font_weight_middle
     
 // ---------------------------------- FOOTER
