--- a/assets/css/sass/elements/_headerMenu.sass
+++ b/assets/css/sass/elements/_headerMenu.sass
@@ -20,7 +20,7 @@
         border-bottom: 3px solid $link_color2
       &:hover
         @extend .active-link
-      .mobile &.no-touch
+      .touch-device &.no-touch
         border: none
 
       a
